<resources>
    <string name="app_name">StringWeek3</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="possibitities_of_travel">Possibitities of Travel</string>
    <string name="discover_the_endless">Discover the Endless</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_name_optional">Enter your name ( optional)</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="i_hvae_read_and_agree_to_string_s">   I have read and agree to String\'s</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="sing_up">sing up</string>
    <string name="log_in">Log In</string>
    <string name="select_intersets">Select Intersets</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address_below_and_follow_the_n_instruction_in_th_email_we_ll_send_you">Enter your email address below and follow the \n instruction in the email we\'ll send you.</string>
    <string name="verity_your_account">Verity your Account</string>
    <string name="select_at_least_3_tags_that_represents_your_n_interest">Select at least 3 tags that represents your \n interest</string>
    <string name="add_some_suggested_users_from_the_comunity">Add some suggested users from the comunity</string>
    <string name="enable_notifications">ENABLE NOTIFICATIONS</string>
    <string name="okay">okay</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="be_in_the_know_whenever_you_nreceive_mesages_new_follows_n_and_more">Be in the know whenever you \nreceive mesages, new follows \n and more</string>
    <string name="share_your_location_to_heple_us_nfind_the_best_places_near_you">Share your location to heple us \nfind the best places near you</string>
    <string name="turn_on_location_service">TURN ON LOCATION SERVICE</string>
    <string name="get_inspires_by_your_npersonalised_feed">Get inspires by your \npersonalised feed</string>
    <string name="discover_places_that_revolves_around_your_ninterests_and_social_network_save_the_ones_that_ncall_out_to_you_strongly_and_organise_them_nicely_ninto_your_itineraries_at_a_later_time">Discover places that revolves around your \ninterests and social network. Save the ones that \ncall out to you strongly and organise them nicely \ninto your itineraries at a later time.</string>
    <string name="login">login</string>
    <string name="follow_people">Follow People</string>
    <string name="email">Email</string>
    <string name="your_email">your email</string>
    <string name="send_reset_link">send reset link</string>
    <string name="_3_more">3 More</string>
    <string name="a_verification_email_has_been_sent_to">A verification email has been sent to :</string>
    <string name="check_your_email_an_click_on_the_verification_lick_n_to_activate_your_account">Check your email an click on the verification lick \n to activate your account.</string>
    <string name="resend_email">Resend Email</string>
    <string name="open_mail_app">open mail app</string>
    <string name="_1_530">1,530</string>
    <string name="_4">4</string>
    <string name="sing_up_with_email">sing up with email</string>
    <string name="sing_up_with_facebook">sing up with facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="done">done</string>
</resources>