<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.NotificationPush">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/notification3x1" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="13sp"
        android:text="@string/enable_notifications" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/be_in_the_know_whenever_you_nreceive_mesages_new_follows_n_and_more" />

    <Button
        android:id="@+id/btnOkey"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:background="@drawable/buttonsingup2"
        android:textColor="#fff"
        android:text="@string/okay" />

    <TextView
        android:id="@+id/txtMaybePlush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#933DEC"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/maybe_later" />


</LinearLayout>