<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.VerifyYourAccount">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarVerity"
        android:layout_width="74dp"
        android:layout_height="33dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="15dp"
        app:navigationIcon="?attr/homeAsUpIndicator" />
    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:gravity="center|bottom"
        android:layout_marginBottom="15dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/verity_your_account" />
</LinearLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:src="@drawable/ic_notification_empty"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="15sp"
        android:text="@string/a_verification_email_has_been_sent_to" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="" />

    <TextView
        android:id="@+id/textView36"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:textColor="#000"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_your_email_an_click_on_the_verification_lick_n_to_activate_your_account" />

    <TextView
        android:id="@+id/tvResend"
        android:textSize="15sp"
        android:textColor="#933DEC"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_email" />

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:background="@drawable/buttonsingup2"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:text="@string/open_mail_app" />

</LinearLayout>