<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ForgotPasswordActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarFogotPassword"
            android:layout_width="74dp"
            android:layout_height="33dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            app:navigationIcon="?attr/homeAsUpIndicator" />

        <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginBottom="15dp"
        android:gravity="center|bottom"
        android:text="@string/forgot_password" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ECEDEE"
        android:text=""/>
    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:gravity="center"
        android:layout_margin="15dp"
        android:text="@string/enter_your_email_address_below_and_follow_the_n_instruction_in_th_email_we_ll_send_you" />

    <TextView
        android:layout_marginStart="10dp"
        android:id="@+id/textView32"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#000"
        android:hint="@string/your_email"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:background="@android:color/transparent"
        android:text="" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ECEDEE"
        android:layout_marginTop="15dp"
        android:text="" />

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonsingup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:textColor="#fff"
        android:layout_marginRight="60dp"
        android:text="@string/send_reset_link" />
</LinearLayout>