<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentIntro1"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="130dp"
        android:scaleType="centerCrop"
        android:src="@drawable/intro11" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="130dp"
        android:layout_height="45dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/ic_ico_heart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_1_530"
            android:textColor="#000"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/ic_ico_comment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_4"
            android:textColor="#000"
            android:textSize="15sp" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginLeft="45dp"
            android:src="@drawable/ic_ico_more"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:src="@drawable/ic_combined_shape_black" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/get_inspires_by_your_npersonalised_feed" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/discover_places_that_revolves_around_your_ninterests_and_social_network_save_the_ones_that_ncall_out_to_you_strongly_and_organise_them_nicely_ninto_your_itineraries_at_a_later_time"
        android:textColor="#000"
        android:textSize="15sp" />

</LinearLayout>