<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.FollowPeople">
<LinearLayout
    android:layout_marginTop="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFollowPeople"
        android:layout_width="61dp"
        android:layout_height="33dp"
        app:navigationIcon="?attr/homeAsUpIndicator" />
    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="50dp"
        android:text="@string/follow_people" />

    <Button
        android:id="@+id/btnDone"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonsingup2"
        android:text="@string/done" />

</LinearLayout>

    <TextView
        android:id="@+id/textView40"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ECEDEE"/>

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_marginTop="12dp"
        android:text="@string/add_some_suggested_users_from_the_comunity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFollowPeople"
        android:paddingHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
</LinearLayout>